mpcop (0.2.0) UNRELEASED; urgency=medium

  * docs: add documentation
  * feat: use state for average latency in the home component 
  * feat: separate confirmation dialog to its own component 

 -- Kristian Mika <xmika2@mail.muni.cz>  Sun, 21 Nov 2021 07:38:30 +0100

mpcop (0.1.0) unstable; urgency=medium

  * feat: initial platform

 -- Kristian Mika <xmika2@mail.muni.cz>  Thu, 18 Nov 2021 23:07:01 +0100