@@ -1,0 +1,4 @@
+export enum Origin {
+	UPDATES = "Updates",
+	RESPONSE = "Response",
+}
