@@ -3,6 +3,8 @@ mpcop (0.2.0) UNRELEASED; urgency=medium
   * docs: add documentation
   * feat: use state for average latency in the home component 
   * feat: separate confirmation dialog to its own component 
+  * fix: increase z-index of the debug area
+  * feat: improve client debug messages
 
  -- Kristian Mika <xmika2@mail.muni.cz>  Sun, 21 Nov 2021 07:38:30 +0100
 
